[package]
name = "kademlia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
base64 = "0.22"
bitvec = "1.0.1"
generic-array = "1.0.0"
futures = "0.3.30"
thiserror = "1.0.57"
log = "0.4"
prost = "0.12"
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.11"

[dev-dependencies]
tokio-test="0.4.3"
mockall="0.12.1"

[build-dependencies]
tonic-build="0.11"